spacing issues and gradient for testimonial slider

--- a/css/kcdstyle.css
+++ b/css/kcdstyle.css
@@ -82,7 +82,7 @@ body {
 
 .jumbotron-kc {
     margin-top: 50px;
-    margin-bottom: 0px;
+    margin-bottom: 30px;
     padding: 0px;
 }
 .jumbotron-kc > .container-fluid-kc {
@@ -149,12 +149,12 @@ blockquote {
 #testimonial-carousel {
     margin: 0;
     width: 100%;
-    height: 250px;
+    height: 200px;
     padding: 0;
 }
 #testimonial-carousel .carousel-cell{
     width: 100%;
-    background-image: linear-gradient(to right, rgba(58,101,183,0.25),white 33%,white 66%,rgba(58,101,183,0.25));
+    background-image: linear-gradient(to right, rgba(58,101,183,0.2),white 25%,white 75%,rgba(58,101,183,0.2));
     text-align: center;
     height: 100%;
     padding: 20px 0;
